# mwc

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
data/shader/: brdf.slang  default.slang  math_constants.slang
source/motor/: motor.cpp  mwc.cpp
source/motor/core/concept/: concept.cppm
source/motor/core/container/: extent.cppm  static_map.cppm
source/motor/core/definition/: convention  definition.cppm
source/motor/core/diagnostic/: assert.cppm  debug.cppm  event_severity.cppm  log.cpp  log.cppm  sink.cppm
source/motor/core/diagnostic/log/: log.cppm  sink.cppm
source/motor/core/diagnostics/: assert.cppm  debug.cppm
source/motor/core/metaprogramming/: concept.cppm  type_map.cppm  utility.cppm
source/motor/core/output/: output_stream.cppm
source/motor/core/output/output_stream/: output_stream.cppm
source/motor/core/string/: string.cppm
source/motor/core/utility/: bit.cppm  bit_shift.cppm  configuration.cppm  empty_type.cppm  enum_bitwise_operators.cppm  minimal_integer.cppm  observer_ptr.cppm
source/mwc/: main.cpp  mwc.cpp  mwc.hpp  test.cppm  test.hpp
source/mwc/core/: chrono.cppm
source/mwc/core/algorithm/: hash.cppm
source/mwc/core/chrono/: chrono.cppm  subsystem.cpp  subsystem.hpp
source/mwc/core/configuration/: configuration_type.cppm
source/mwc/core/container/: contiguous_node_tree.cpp  contiguous_node_tree.hpp  data.cppm  data.hpp  data_span.hpp  extent.cppm  optional.cppm  static_bi_map.cppm  static_bi_map.hpp  static_bi_multimap.cppm  static_bi_multimap.hpp  static_map.cppm  static_string.cppm
source/mwc/core/contract/: assertion.cppm  assertion.hpp  assertions.cppm  contract.cppm  contract_copy.hpp  contract_violation.cppm  definition.hpp  natural_syntax.hpp  violation.cpp
source/mwc/core/definition/: code convention  definition.cppm  definition.hpp  file_type.cppm  project_name_string.cppm
source/mwc/core/diagnostic/: assert.cppm  assert.hpp  assert.old  breakpoint.cppm  debug.cppm  event_severity.cppm  log.cppm  sink.cppm
source/mwc/core/diagnostic/log/: default_log.cpp  default_log.hpp  default_logging.cppm  global_logging.cppm  log.cpp  log.cppm  log.hpp  logging.hpp  sink.cppm  sink.old  subsystem.cpp  subsystem.hpp  subsystem_switch.cppm
source/mwc/core/filesystem/: directory.cppm  file_type.cppm  file_type.hpp  subsystem.cpp  subsystem.hpp
source/mwc/core/math/: color.cpp  color.hpp  definition.cppm
source/mwc/core/math/color/: color.cppm
source/mwc/core/math/geometry/: geometry.cppm  vertex_model.cppm
source/mwc/core/memory/: conversion.cppm  virtual_allocator.cpp  virtual_allocator.hpp
source/mwc/core/metaprogramming/: concept.cppm  counter.cppm  ctti.cppm  stateful.cppm  type_map.cppm  utility.cppm
source/mwc/core/metaprogramming/reflect/: enumerator_count.hpp  reflect.hpp  type_identity.cppm
source/mwc/core/output/: output_stream.cppm
source/mwc/core/platform/: compiler.cppm  operating_system.cppm
source/mwc/core/subsystem/: subsystem.cpp  subsystem.cppm
source/mwc/core/utility/: bit.cppm  bit_mask.cppm  chrono.cppm  empty_type.cppm  enum_bitwise_operators.cppm  enum_range.cppm  minimal_integer.cppm  observer_ptr.cppm  pointer_cast.hpp  semantic_version.cpp  semantic_version.hpp  set_bit.cppm  sso_capacity.cppm  type_mobility.cppm  version.cpp  version.hpp
source/mwc/core/window/: resolution.cpp  resolution.cppm  subsystem.cpp  subsystem.hpp  window.cpp  window.hpp
source/mwc/ecs/: archetype.cpp  archetype.hpp  component.cppm  component.hpp  component_convergence.hpp  definition.cppm  definition.hpp  entity.cpp  entity.hpp  subsystem.cpp  subsystem.hpp
source/mwc/graphics/: device_image.cppm  device_mesh.cppm  graphics.cpp  graphics.hpp  mesh.cppm  transfer_registry.cpp  transfer_registry.hpp
source/mwc/graphics/camera/: camera.cpp  camera.hpp  projection_type.cppm
source/mwc/graphics/user_interface/: data_render.hpp  dear_imgui.cpp  dear_imgui.hpp  user_interface.cpp  user_interface.hpp
source/mwc/graphics/vulkan/: buffer.cpp  buffer.hpp  command_pool.cpp  command_pool.hpp  context.cpp  context.hpp  debug.hpp  dynamic_dispatch_storage.cpp  dynamic_rendering_state.cpp  dynamic_rendering_state.hpp  frame_synchronizer.hpp  handle.hpp  image.cpp  image.hpp  instance.cpp  instance.hpp  logical_device.cpp  logical_device.hpp  memory_allocator.cpp  memory_allocator.hpp  memory_mapped_buffer.cpp  memory_mapped_buffer.hpp  physical_device.cpp  physical_device.hpp  pipeline_layout.cpp  pipeline_layout.hpp  push_constant.hpp  queue.cpp  queue.hpp  queue_families.cpp  queue_families.hpp  shader_object.cpp  shader_object.hpp  structure_chain.cppm  suballocated_memory_mapped_buffer.cpp  suballocated_memory_mapped_buffer.hpp  surface.cpp  surface.hpp  swapchain.cpp  swapchain.hpp
source/mwc/input/: subsystem.cpp  subsystem.hpp
source/mwc/input/data/: mesh.cppm  resource.cppm  scene.cppm  scene.hpp
source/mwc/input/data/scene/: host_mesh.cppm  mesh.hpp  scene.hpp  usd.cppm
source/mwc/input/data/scene/camera/: host_camera.cppm
source/mwc/input/data/scene/image/: host_image.cppm  image.cppm  image.hpp  stb_image.cppm
source/mwc/input/data/scene/material/: material.cppm
source/mwc/input/data/shader/: shader.hpp  shader_source.cppm  slang.cppm  spir_v.cppm
source/mwc/output/: output.cpp  output.hpp
source/mwc/std/: std.cc
source/mwc/window/: resolution.cppm  subsystem.cpp  subsystem.hpp  window.cpp  window.hpp
source/std/: std.cc
